--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ div.field {
   flex-direction: column;
   padding: 60px;
   width: 500px;
+  position: relative;
   height: 500px;
 }
 div.field div.row {
@@ -31,6 +32,12 @@ div.field div.row div.wall-2 {
 }
 div.field div.row div.wall-1 {
   background: url("../images/wall/wall-1.png") center center/cover no-repeat;
+}
+div.field div.row div.megawall {
+  background: url("../images/megawall.png") center center/cover no-repeat;
+}
+div.field div.row div.angrywall {
+  background: url("../images/magma.gif") center center/cover no-repeat;
 }
 div.field div.row div.money {
   position: relative;
@@ -89,6 +96,28 @@ div.field div.row div.slow {
   animation: robot-stay 0.75s steps(2) infinite;
 }
 
+.enemy {
+  background: red;
+  width: 50px;
+  height: 50px;
+  background: url("../images/enemy.png") center center/contain no-repeat;
+  position: relative;
+  z-index: 1;
+  image-rendering: pixelated; /* Современные браузеры */
+  image-rendering: crisp-edges; /* Вариант для старых браузеров */
+  background-size: contain;
+  background-position: center center;
+  animation: none;
+}
+
+@keyframes enemy-stay {
+  0% {
+    background-position: -5px -60px;
+  }
+  100% {
+    background-position: -225px -60px;
+  }
+}
 @keyframes robot-stay {
   0% {
     background-position: -297px -37px;
@@ -280,7 +309,7 @@ div.field div.row div.slow {
   z-index: 10;
 }
 
-#popup-content {
+#popup-field {
   background: #fff;
   padding: 20px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -289,7 +318,7 @@ div.field div.row div.slow {
   text-align: center;
   max-width: 300px;
 }
-#popup-content button {
+#popup-field button {
   font-size: 18px;
   margin-top: 20px;
   font-weight: bold;
@@ -299,4 +328,16 @@ div.field div.row div.slow {
   padding: 10px;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.health-bar {
+  color: #fff;
+  font-weight: bold;
+  font-size: 24px;
+  padding: 10px;
+  position: absolute;
+  margin: 0;
+  top: 10px;
+  right: 10px;
+  background-color: #222;
 }/*# sourceMappingURL=style.css.map */
